--- a/src/projet/client/index.html
+++ b/src/projet/client/index.html
@@ -15,16 +15,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="/js/AccueilCtrl.js"></script>
-    <script src="/js/CommandesCtrl.js"></script>
-    <script src="/js/CreationCompteCtrl.js"></script>
-    <script src="/js/HttpService.js"></script>
-    <script src="/js/IndexCtrl.js"></script>
-    <script src="/js/LoginCtrl.js"></script>
-    <script src="/js/PanierCtrl.js"></script>
-    <script src="/js/ProduitCtrl.js"></script>
-    <script src="/js/RechercheCtrl.js"></script>
-    <script src="/js/VueService.js"></script>
+    <script src="js/AccueilCtrl.js"></script>
+    <script src="js/CommandesCtrl.js"></script>
+    <script src="js/CreationCompteCtrl.js"></script>
+    <script src="js/HttpService.js"></script>
+    <script src="js/IndexCtrl.js"></script>
+    <script src="js/LoginCtrl.js"></script>
+    <script src="js/PanierCtrl.js"></script>
+    <script src="js/ProduitCtrl.js"></script>
+    <script src="js/RechercheCtrl.js"></script>
+    <script src="js/VueService.js"></script>
 </head>
 
 <body id="view">
