--- a/src/projet/client/index.html
+++ b/src/projet/client/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="js/helpers/jquery-1.10.2.min.js"></script>
     <script src="js/AccueilCtrl.js"></script>
     <script src="js/CommandesCtrl.js"></script>
     <script src="js/CreationCompteCtrl.js"></script>
